Added environment stuff to readme